[build-system]
requires = ["setuptools>=77.0.0", "setuptools_scm[toml]>=6.4.0"]
build-backend = "setuptools.build_meta"

[project]
version = "1.6"
name = "dissect.jffs"
description = "A Dissect module implementing a parser for the JFFS2 file system, commonly used by router operating systems"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "COPYRIGHT"]
authors = [
  {name = "JSCU-NL", email = "121175071+JSCU-CNI@users.noreply.github.com"},
  {name = "Dissect Team", email = "dissect@fox-it.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
    "dissect.cstruct>=4.dev,<5",
    "dissect.util>=3,<4",
]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools/en/latest/projects/dissect.jffs"
repository = "https://github.com/fox-it/dissect.jffs"

[project.optional-dependencies]
dev = [
    "dissect.cstruct>=4.0.dev,<5.0.dev",
    "dissect.util>=3.0.dev,<4.0.dev",
]

[dependency-groups]
test = [
]
lint = [
    "vermin",
]
build = [
    "build",
]
debug = [
    "ipdb",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "debug"},
]

[tool.setuptools.packages.find]
include = ["dissect.*"]
where = ["src"]


[tool.uv.sources."dissect.cstruct"]
workspace = true

[tool.uv.sources."dissect.util"]
workspace = true

[tool.ruff]
extend = "../../ruff.toml"

[tool.ruff.lint.isort]
known-first-party = ["dissect.jffs"]
known-third-party = ["dissect"]


[tool.pytest.ini_options]
testpaths = ["tests"]
