[build-system]
requires = ["setuptools>=65.5.0", "setuptools_scm[toml]>=6.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dissect.squashfs"
description = "A Dissect module implementing a parser for the SquashFS file system, commonly used in appliance or device firmware"
readme = "README.md"
requires-python = "~=3.9"
license.text = "Affero General Public License v3"
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: Log Analysis",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Security",
  "Topic :: Utilities",
]
dependencies = [
    "dissect.cstruct>=3.0.dev,<4.0.dev",
    "dissect.util>=3.0.dev,<4.0.dev",
]
dynamic = ["version"]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools/en/latest/projects/dissect.squashfs"
repository = "https://github.com/fox-it/dissect.squashfs"

[project.optional-dependencies]
full = [
    "lz4",
    # There are no Windows PyPy wheels available for python-lzo
    # So we use a pure python fallback for it.
    "python-lzo; platform_system != 'Windows' or platform_python_implementation != 'PyPy'",
    "zstandard",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_first_party = ["dissect.squashfs"]
known_third_party = ["dissect"]

[tool.setuptools]
license-files = ["LICENSE", "COPYRIGHT"]

[tool.setuptools.packages.find]
include = ["dissect.*"]

[tool.setuptools_scm]
