[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
version = "1.12"
name = "dissect.squashfs"
description = "A Dissect module implementing a parser for the SquashFS file system, commonly used in appliance or device firmware"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "COPYRIGHT"]
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: Log Analysis",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Security",
  "Topic :: Utilities",
]
dependencies = [
    "dissect.cstruct>=4,<5",
    "dissect.util>=3,<4",
]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools/en/latest/projects/dissect.squashfs"
repository = "https://github.com/fox-it/dissect.squashfs"

[project.optional-dependencies]
full = [
    "backports.zstd; python_version < '3.14'",
]

[tool.setuptools.packages.find]
include = ["dissect.*"]
where = ["src"]


[tool.uv.sources."dissect.cstruct"]
workspace = true

[tool.uv.sources."dissect.squashfs"]
workspace = true

[tool.uv.sources."dissect.util"]
workspace = true

[tool.ruff]
extend = "../../ruff.toml"

[tool.ruff.lint.isort]
known-first-party = ["dissect.squashfs"]
known-third-party = ["dissect"]


[tool.pytest.ini_options]
testpaths = ["tests"]
