[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
version = "1.11"
name = "dissect.thumbcache"
description = "A Dissect module implementing parsers for the thumbcache of Windows systems."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "COPYRIGHT"]
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: Log Analysis",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Security",
  "Topic :: Utilities",
]
dependencies = [
    "dissect.cstruct>=4,<5",
    "dissect.util>=3,<4",
]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools/en/latest/projects/dissect.thumbcache"
repository = "https://github.com/fox-it/dissect.thumbcache"

[project.optional-dependencies]
dev = [
    "dissect.cstruct>=4.0.dev,<5.0.dev",
    "dissect.util>=3.0.dev,<4.0.dev",
]

[dependency-groups]
test = [
]
lint = [
    "vermin",
]
build = [
    "build",
]
debug = [
    "ipdb",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "debug"},
]

[project.scripts]
thumbcache-extract = "dissect.thumbcache.tools.extract_images:main"
thumbcache-extract-indexed = "dissect.thumbcache.tools.extract_with_index:main"

[tool.setuptools.packages.find]
include = ["dissect.*"]
where = ["src"]


[tool.uv.sources."dissect.cstruct"]
workspace = true

[tool.uv.sources."dissect.util"]
workspace = true

[tool.ruff]
extend = "../../ruff.toml"

[tool.ruff.lint.isort]
known-first-party = ["dissect.thumbcache"]
known-third-party = ["dissect"]


[tool.pytest.ini_options]
testpaths = ["tests"]
