[build-system]
requires = ["setuptools>=80.9.0"]
backend-path = ["src/dissect/util"]
build-backend = "_build"

[project]
version = "3.24.1"
name = "dissect.util"
description = "A Dissect module implementing various utility functions for the other Dissect modules"
readme = "README.md"
requires-python = ">=3.10.0"
license = "Apache-2.0"
license-files = ["LICENSE", "COPYRIGHT"]
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: Log Analysis",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Security",
  "Topic :: Utilities",
]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools/en/latest/projects/dissect.util"
repository = "https://github.com/fox-it/dissect.util"


[dependency-groups]
test = [
]
lint = [
  "vermin",
]
build = [
    "build",
]
debug = [
    "ipdb",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "debug"},
]

[project.scripts]
dump-nskeyedarchiver = "dissect.util.tools.dump_nskeyedarchiver:main"

[tool.setuptools.packages.find]
include = ["dissect.*"]
where = ["src"]

[tool.setuptools.exclude-package-data]
"*" = ["_native.src/*"]

[[tool.setuptools-rust.ext-modules]]
target = "dissect.util._native"
path = "dissect/util/_native.src/Cargo.toml"
features = ["pyo3/extension-module"]
strip = "All"

[tool.ruff]
extend = "../../ruff.toml"

[tool.ruff.lint.isort]
known-first-party = ["dissect.util"]
known-third-party = ["dissect"]
required-imports = ["from __future__ import annotations"]


[tool.pytest.ini_options]
testpaths = ["tests"]
