[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
version = "3.22"
name = "dissect"
description = "Dissect is a digital forensics & incident response framework and toolset that allows you to quickly access and analyse forensic artefacts from various disk and file formats, developed by Fox-IT (part of NCC Group)"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "COPYRIGHT"]
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: Log Analysis",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Security",
  "Topic :: Utilities",
]
dependencies = [
    "dissect.apfs==1.1",
    "dissect.archive==1.8",
    "dissect.btrfs==1.10",
    "dissect.cim==3.13",
    "dissect.clfs==1.11",
    "dissect.cramfs==1.1",
    "dissect.cstruct==4.7",
    "dissect.database==1.1",
    "dissect.etl==3.14",
    "dissect.eventlog==3.11",
    "dissect.evidence==3.13",
    "dissect.executable==1.11",
    "dissect.extfs==3.15",
    "dissect.fat==3.13",
    "dissect.ffs==3.12",
    "dissect.fve==4.6.1",
    "dissect.hypervisor==3.21",
    "dissect.jffs==1.6",
    "dissect.ntfs==3.16",
    "dissect.ole==3.12",
    "dissect.qnxfs==1.2",
    "dissect.regf==3.14",
    "dissect.shellitem==3.13",
    "dissect.squashfs==1.12",
    "dissect.target[full]==3.25.1",
    "dissect.thumbcache==1.11",
    "dissect.util==3.24.3",
    "dissect.vmfs==3.13",
    "dissect.volume==3.18",
    "dissect.xfs==3.13",
]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools"
repository = "https://github.com/fox-it/dissect"

[tool.setuptools.packages.find]
include = ["dissect.*"]


[tool.uv.sources."dissect.apfs"]
workspace = true

[tool.uv.sources."dissect.archive"]
workspace = true

[tool.uv.sources."dissect.btrfs"]
workspace = true

[tool.uv.sources."dissect.cim"]
workspace = true

[tool.uv.sources."dissect.clfs"]
workspace = true

[tool.uv.sources."dissect.cramfs"]
workspace = true

[tool.uv.sources."dissect.cstruct"]
workspace = true

[tool.uv.sources."dissect.database"]
workspace = true

[tool.uv.sources."dissect.etl"]
workspace = true

[tool.uv.sources."dissect.eventlog"]
workspace = true

[tool.uv.sources."dissect.evidence"]
workspace = true

[tool.uv.sources."dissect.executable"]
workspace = true

[tool.uv.sources."dissect.extfs"]
workspace = true

[tool.uv.sources."dissect.fat"]
workspace = true

[tool.uv.sources."dissect.ffs"]
workspace = true

[tool.uv.sources."dissect.fve"]
workspace = true

[tool.uv.sources."dissect.hypervisor"]
workspace = true

[tool.uv.sources."dissect.jffs"]
workspace = true

[tool.uv.sources."dissect.ntfs"]
workspace = true

[tool.uv.sources."dissect.ole"]
workspace = true

[tool.uv.sources."dissect.qnxfs"]
workspace = true

[tool.uv.sources."dissect.regf"]
workspace = true

[tool.uv.sources."dissect.shellitem"]
workspace = true

[tool.uv.sources."dissect.squashfs"]
workspace = true

[tool.uv.sources."dissect.target"]
workspace = true

[tool.uv.sources."dissect.thumbcache"]
workspace = true

[tool.uv.sources."dissect.util"]
workspace = true

[tool.uv.sources."dissect.vmfs"]
workspace = true

[tool.uv.sources."dissect.volume"]
workspace = true

[tool.uv.sources."dissect.xfs"]
workspace = true
