[build-system]
requires = ["setuptools>=65.5.0", "setuptools_scm[toml]>=6.4.0"]
build-backend = "setuptools.build_meta"

[project]
# Replace 'template' with the actual name of your project
name = "dissect.contrib.template"
# Give a short description of your project
description = "This is a template useful for creating your own dissect contrib packages"
# Specify the README file used, e.g. README, README.rst, README.md etc.
readme = "README.md"
requires-python = "~=3.9"
# Replace with a short string describing the license you use
license.text = "Your license"
# REplace with your name & e-mail address
authors = [
  {name = "Your Name", email = "your-email@example.com"}
]
# Add some usefull classifiers here
classifiers = [
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.urls]
# Replace with the actual websites you use as homepage, documentation site and
# repository, or remove if not used
homepage = "https://homepage.for.your.project.example.com"
documentation = "https://docs.for.your.project.example.com/"
repository = "https://github.com/username/dissect.contrib.template

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
# Replace 'template' with the actual name of your project
known_first_party = ["dissect.contrib.template"]
known_third_party = ["dissect"]

[tool.setuptools]
# Specify all files that describe licenses used and copyrights held here
license-files = ["LICENSE", "COPYRIGHT"]

[tool.setuptools.packages.find]
# This governs the files included in the wheel distribution of your project.
# For files that should or should not be part of your source distribution, use
# MANIFEST.in.
include = ["dissect.*"]

[tool.setuptools_scm]
